# advent-of-code

./: .gitignore  LICENSE  README.md  pyproject.toml
2015/11/: __main__.py
2015/2/: __main__.py
2015/3/: __main__.py
2015/6/: __main__.py
2015/8/: __main__.py
2015/9/: __main__.py
2016/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py
2016/1/: __main__.py
2016/4/: __main__.py
2016/5/: __main__.py
2016/6/: __main__.py
aoc/: __main__.py  day_template.py  initialize_day.py  remove_cache_folders.py  utils.py
aoc/2015/01/: __main__.py
aoc/2015/02/: __main__.py
aoc/2015/03/: __main__.py
aoc/2015/04/: __main__.py
aoc/2015/05/: __main__.py
aoc/2015/06/: __main__.py
aoc/2015/07/: __main__.py
aoc/2015/08/: __main__.py
aoc/2015/09/: __main__.py
aoc/2015/1/: __main__.py
aoc/2015/10/: __main__.py
aoc/2015/11/: __main__.py
aoc/2015/12/: __main__.py
aoc/2015/13/: __main__.py
aoc/2015/14/: __main__.py
aoc/2015/4/: __main__.py
aoc/2016/01/: __main__.py
aoc/2016/02/: __main__.py
aoc/2016/03/: __main__.py
aoc/2016/04/: __main__.py
aoc/2016/05/: __main__.py
aoc/2016/06/: __main__.py
aoc/2016/07/: __main__.py
aoc/2016/08/: __main__.py
aoc/2016/09/: __main__.py
aoc/2016/7/: __main__.py
aoc/2016/8/: __main__.py
aoc/2016/9/: __main__.py
aoc/cli/: __init__.py  app.py  template.py  utils.py
aoc/initialize_day/: __init__.py  __main__.py  day_template.py  initialize_day.py
aoc/tools/: cleanup.py  run_all_solutions.py
aoc/utils/: day_template.py  initialize_day.py
tests/: run_all_solutions.py
(+105 files in other folders)
