[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Valerio Avenoso <***REMOVED***>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
