[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Valerio Avenoso"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.6"
requests = "^2.32.5"
pandas = "^2.3.2"
tqdm = "^4.67.1"
scipy = "^1.16.1"
ruff = "^0.12.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
