[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "Valerio Avenoso" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "numpy>=2.2.6,<3",
    "requests>=2.32.5,<3",
    "pandas>=2.3.2,<3",
    "tqdm>=4.67.1,<5",
    "scipy>=1.16.1,<2",
    "ruff>=0.12.11,<0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aoc"]
